Fixing no records page cutoff and adding no records message

--- a/frontend/src/pages/RecordList/RecordList.module.scss
+++ b/frontend/src/pages/RecordList/RecordList.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
 
   .sidebar {
     width: 300px;
@@ -11,7 +11,7 @@
     background-color: var(--card-bg);
     border-right: 1px solid var(--card-border);
     height: 100%;
-    position: absolute; // important to remove it from layout when hidden
+    position: absolute;
     left: 0;
     top: 0;
     bottom: 0;
@@ -88,7 +88,8 @@
 
   .sidebar {
     position: absolute;
-    height: 100%;
+    height: 100vh;
+    min-height: 100%;
     top: 0;
     left: 0;
     transform: translateX(-100%);
